docs: add documentatio for delete opening
